added settings into admin panel

--- a/config/settings.ini
+++ b/config/settings.ini
@@ -1,11 +1,13 @@
-goods_images_dir = 'web/files/goods/'
-goods_features_images_dir = 'web/files/features/'
+goods_images_dir = 'web/files/goods/';
+goods_features_images_dir = 'web/files/features/';
 
-full_size_x = '800'
-full_size_y = '800'
+full_size_x = '800';
+full_size_y = '800';
 
-small_size_x = '500'
-small_size_y = '500'
+small_size_x = '200';
+small_size_y = '200';
 
-middle_size_x = '200'
-middle_size_y = '200'
+middle_size_x = '500';
+middle_size_y = '500';
+
+prefix = '.html_prefix';
