--- a/config/settings.ini
+++ b/config/settings.ini
@@ -10,7 +10,7 @@ small_size_y = '200';
 middle_size_x = '500';
 middle_size_y = '500';
 
-prefix = '.html_prefix';
+prefix = '.html';
 
 date_format = 'm.d.Y H:i:s';
 currency = 'грн';
