--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,5 @@
-﻿RewriteEngine On
+﻿#php_flag display_errors off
+RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule .* index.php [L]
